examples/datalog/18_advanced_patterns/54_dense_rank.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_dense_rank
Knowledge graph 'test_dense_rank' created.
Switched to knowledge graph: test_dense_rank
> .kg use test_dense_rank
Switched to knowledge graph: test_dense_rank
> +scores[("A", 100), ("B", 90), ("C", 100), ("D", 85)].
Inserted 4 fact(s) into 'scores'.
> +distinct_scores(<MIN:Score>) :- scores(_, Score).
Script error: Parse error: Invalid term: '<MIN:Score>'
